--- a/ansible/templates/config/prod.secret.exs.j2
+++ b/ansible/templates/config/prod.secret.exs.j2
@@ -12,7 +12,7 @@ use Mix.Config
 #   secret_key_base: "9ZyPSOdk3vc/8GM8OK7Y5rMGxHlRU6MYvoxEQkO8qjb1xm9gGSO3rzYGVzWNP+0c"
 
 # Configure your database
-config :deploy_template, DeployTemplate.Repo,
+config :elixir_tw, ElixirTw.Repo,
   adapter: Ecto.Adapters.Postgres,
   username: "{{ elixir_release_name_code }}",
   password: "{{ db_pass }}",
